Fixed weird cut offs. Moved to less elegant, but more correct algorithm.
Added an alias array property so that <br /> and custom tags could be implemented. Self closing tags are easier now. A lot of it uses regex.

--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Parcel Sandbox</title>
+    <meta charset="UTF-8" />
+  </head>
 
-<head>
-	<title>Parcel Sandbox</title>
-	<meta charset="UTF-8" />
-</head>
+  <body>
+    <header>
+      <h1>Styled Logs</h1>
+      <p>A miniature console colorizer library</p>
+    </header>
+    <main>
+      <h3>Check the console</h3>
+      <div class="shortcut"></div>
+    </main>
 
-<body>
-	<main>
-		<h1>Console Colorizer Library</h1>
-		<p>Check the console</p>
-	</main>
-
-	<script src="src/index.js">
-</script>
-</body>
-
+    <script src="src/index.js"></script>
+  </body>
 </html>
