added alias explanation and support

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Parcel Sandbox</title>
+    <title>Styled Logs</title>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" type="text/css" href="styles.css" >
   </head>
 
   <body>
@@ -15,6 +16,6 @@
       <div class="shortcut"></div>
     </main>
 
-    <script src="src/index.js"></script>
+    <script src="src/index.js" type="module"></script>
   </body>
 </html>
