reformatted structure. Added minified version using Rollup

--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
   <head>
     <title>Styled Logs</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="styles.css" >
+    <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
 
   <body>
-    <header>
-      <h1>Styled Logs</h1>
-      <p>A miniature console colorizer library</p>
-    </header>
     <main>
-      <h3>Check the console</h3>
-      <div class="shortcut"></div>
+      <h1>Styled Logs</h1>
+      <h3>A miniature console colorizer library</h3>
+      <p>> Check the console <span class="cursor"></span></p>
     </main>
 
     <script src="src/index.js" type="module"></script>
+    <script src="examples/PackageVersion.js" type="module"></script>
+    <script src="examples/HighScore.js" type="module"></script>
   </body>
 </html>
