--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <script src="src/index.js" type="module"></script>
     <script src="examples/PackageVersion.js" type="module"></script>
     <script src="examples/HighScore.js" type="module"></script>
+    <script src="examples/AdvancedStyling.js" type="module"></script>
   </body>
 </html>
