fixed tags not parsing when ending a log

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </main>
 
     <script src="src/index.js" type="module"></script>
+    <script src="examples/Basic.js" type="module"></script>
     <script src="examples/PackageVersion.js" type="module"></script>
     <script src="examples/HighScore.js" type="module"></script>
     <script src="examples/AdvancedStyling.js" type="module"></script>
