--- a/examples/index.html
+++ b/examples/index.html
@@ -13,10 +13,9 @@
       <p>> Check the console <span class="cursor"></span></p>
     </main>
 
-    <script src="src/index.js" type="module"></script>
-    <script src="examples/Basic.js" type="module"></script>
-    <script src="examples/PackageVersion.js" type="module"></script>
-    <script src="examples/HighScore.js" type="module"></script>
-    <script src="examples/AdvancedStyling.js" type="module"></script>
+    <script src="./logs/Basic.js" type="module"></script>
+    <script src="./logs/PackageVersion.js" type="module"></script>
+    <script src="./logs/HighScore.js" type="module"></script>
+    <script src="./logs/AdvancedStyling.js" type="module"></script>
   </body>
 </html>
